--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start  --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-check-box": "^2.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
