--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.4",
@@ -17,7 +18,8 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-check-box": "^2.1.7"
+    "react-native-check-box": "^2.1.7",
+    "react-native-textarea": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
