--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,10 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-check-box": "^2.1.7",
-    "react-native-textarea": "^1.0.4"
+    "react-native-textarea": "^1.0.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
